# kaggle-olist-eda-PI4

./: LICENSE  pyproject.toml  readme.md
src/streamlit/: home.py
src/streamlit/pages/: 1_Categorias.py  2_Localizção.py
