[tool.poetry]
name = "kaggle-olist"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.14"
seaborn = "^0.13.2"
scikit-learn = "^1.5.1"
pandas = "^2.2.2"
plotly-express = "^0.4.1"
unicode = "^2.9"
unidecode = "^1.3.8"
geopandas = "^1.0.1"
ipykernel = "^6.29.5"
nbformat = "^5.10.4"
streamlit = "^1.39.0"
kaleido = "0.2.1"
folium = "^0.18.0"
streamlit-folium = "^0.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
